# hexagonal-architecture-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  setup.cfg
.docker/localstack/: init.sh
http_requests/: clients.http  gym-classes.http  gym-passes.http  http-client.env.json
src/: app.py
src/building_blocks/: clock.py  custom_types.py  db.py  errors.py
src/clients/: __init__.py  bootstrap.py  controllers.py
src/clients/application/: client_service.py  clients_parser.py  dto.py  exporter_factory.py
src/clients/domain/: client.py  client_id.py  client_repository.py  clients_exporter.py  email_address.py  errors.py  report.py  status.py
src/clients/infrastructure/: dropbox_clients_exporter.py  in_memory_client_repository.py  mongo_client_repository.py  s3_clients_exporter.py
src/gym_classes/: config.py  controllers.py  errors.py  models.py  service.py
src/gym_passes/: __init__.py  bootstrap.py  controllers.py  facade.py
src/gym_passes/application/: dto.py  gym_pass_service.py
src/gym_passes/domain/: date_range.py  errors.py  gym_pass.py  gym_pass_id.py  gym_pass_repository.py  pause.py  status.py
src/gym_passes/infrastructure/: in_memory_gym_pass_repository.py  mongo_gym_pass_repository.py
tests/: conftest.py
tests/integration/clients/: conftest.py  test_controllers.py  test_dropbox_clients_exporter.py  test_mongo_client_repository.py  test_s3_clients_exporter.py  test_service.py
tests/integration/gym_classes/: conftest.py  test_controllers.py  test_service.py
tests/integration/gym_passes/: conftest.py  test_gym_pass_service.py  test_mongo_gym_pass_repository.py
tests/unit/clients/: test_client.py  test_client_id.py  test_email_address.py
tests/unit/gym_passes/: test_date_range.py  test_gym_pass.py  test_gym_pass_id.py  test_pause.py
